fix for errant scrollbar

--- a/app/main.css
+++ b/app/main.css
@@ -8,6 +8,7 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 body {
